[project]
name = "generationengine"
version = "0.1.0"
description = "Unified generation infrastructure for DungeonMind generators"
authors = [
    {name = "Alan Meigs", email = "alan.meigs@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "openai>=2.14.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "generationengine",
    "generationengine.models",
    "generationengine.providers",
    "generationengine.services",
    "generationengine.utils",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

